# FEBioHeat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: linux-pull-request.yml  linux-push.yml  linux.yml  macos-pull-request.yml  macos-push.yml  macos.yml  windows-pull-request.yml  windows-push.yml  windows.yml
Examples/: febio.xml  ht02.feb  ht03.feb
FEBioHeat/: FEBioHeat.cpp  FEConvectiveHeatFlux.cpp  FEConvectiveHeatFlux.h  FEGapHeatFlux.cpp  FEGapHeatFlux.h  FEHeatAnalysis.cpp  FEHeatAnalysis.h  FEHeatBC.cpp  FEHeatBC.h  FEHeatDomainFactory.cpp  FEHeatFlux.cpp  FEHeatFlux.h  FEHeatSolidDomain.cpp  FEHeatSolidDomain.h  FEHeatSolver.cpp  FEHeatSolver.h  FEHeatSource.cpp  FEHeatSource.h  FEHeatTransferMaterial.h  FEInitialTemperature.cpp  FEInitialTemperature.h  FEIsotropicFourier.cpp  FEIsotropicFourier.h  FEPlotHeatFlux.cpp  FEPlotHeatFlux.h  version.h
VS2013/: FEBioHeat.sln
VS2013/FEBioHeat/: FEBioHeat.vcxproj  FEBioHeat.vcxproj.filters
VS2017/: FEBioHeat.sln
VS2017/FEBioHeat/: FEBioHeat.vcxproj  FEBioHeat.vcxproj.filters
Xcode/FEBioHeat/FEBioHeat.xcodeproj/: project.pbxproj
ci/Linux/: build.sh  cmake.sh  publish-to-s3.sh  scp-to-repo.sh
ci/Windows/: build.bat  publish-to-s3.sh  scp-to-repo.sh
ci/linux/: build.sh  cmake.sh  febio-sdk.sh
ci/macOS/: build.sh  cmake.sh  scp-to-repo.sh
ci/windows/: build.bat
doc/: FEBioHeat_Theory_Manual.docx  FEBioHeat_User_Manual.docx
docs/: febioheat_theory.md  febioheat_tutorial1.md  febioheat_user_manual.md  index.md
docs/js/: mathjax_config.js
terraform/: .terraform.lock.hcl  main.tf  provider.tf  vars.tf
